# DnsTrace

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
dnstrace/: __main__.py  bpf_sock.c  color.py  dnstrace.py
src/dnstrace/: __main__.py  bpf_kprobe.c  color.py  dnstrace.py
tests/: test_integration.py
