[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dnstrace"
version = "0.1.0"
description = "DnsTrace is a tool that identifies DNS queries made by processes on the host."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["dns", "ebpf", "bpf", "trace"]
authors = [{name = "Furkan Onder", email="furkanonder@protonmail.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
]

dependencies = [
    "dnslib==0.9.25"
]

[project.urls]
"Homepage" = "https://github.com/furkanonder/dnstrace"
"Bug Reports" = "https://github.com/furkanonder/dnstrace/issues"
"Source" = "https://github.com/furkanonder/dnstrace"

[project.scripts]
dnstrace = "dnstrace.__main__:main"

[tool.docformatter]
recursive = true
wrap-summaries = 79
wrap-descriptions = 79
blank = true

[tool.mypy]
warn_unused_configs = true
no_strict_optional = true
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
line-length = 119
lint.select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]
lint.mccabe = { max-complexity = 14 }
